deploy/examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: momo-app
  namespace: momo
  labels:
    app.kubernetes.io/name: momo
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  selector:
    app: momo
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
